--- a/KINCLE/Gym/Gym.storyboard
+++ b/KINCLE/Gym/Gym.storyboard
@@ -67,31 +67,78 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pMy-Tg-P65">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wo8-hE-BK0" customClass="StretchableCollectionViewFlowLayout" customModule="KINCLE" customModuleProvider="target">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="50" height="236"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wo8-hE-BK0" customClass="StretchableCollectionViewFlowLayout" customModule="KINCLE" customModuleProvider="target">
+                                    <size key="itemSize" width="213" height="209"/>
+                                    <size key="headerReferenceSize" width="50" height="244"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FavoriteGymCollectionViewCell" id="86p-T1-8iK" customClass="FavoriteGymCollectionViewCell" customModule="KINCLE" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="236" width="128" height="128"/>
+                                        <rect key="frame" x="100.5" y="244" width="213" height="209"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xLr-0a-21l">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="213" height="209"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dUZ-ls-jeT">
+                                                    <rect key="frame" x="0.0" y="0.0" width="213" height="142"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="142" id="rDk-Ee-Tg4"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SbG-ep-niK">
+                                                    <rect key="frame" x="0.0" y="156" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5mO-oT-6OQ">
+                                                    <rect key="frame" x="0.0" y="182.5" width="213" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Oq-YQ-dol">
+                                                    <rect key="frame" x="188" y="152" width="24" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="24" id="6aQ-fc-Fso"/>
+                                                        <constraint firstAttribute="height" constant="24" id="JbJ-a0-o1A"/>
+                                                    </constraints>
+                                                    <state key="normal" image="favorite_gym_on"/>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="3Oq-YQ-dol" secondAttribute="trailing" constant="1" id="C91-No-Toc"/>
+                                                <constraint firstItem="SbG-ep-niK" firstAttribute="top" secondItem="dUZ-ls-jeT" secondAttribute="bottom" constant="14" id="FkQ-08-14d"/>
+                                                <constraint firstItem="dUZ-ls-jeT" firstAttribute="top" secondItem="xLr-0a-21l" secondAttribute="top" id="LVx-j0-sqv"/>
+                                                <constraint firstItem="dUZ-ls-jeT" firstAttribute="leading" secondItem="xLr-0a-21l" secondAttribute="leading" id="LYR-uC-9b5"/>
+                                                <constraint firstItem="5mO-oT-6OQ" firstAttribute="top" secondItem="SbG-ep-niK" secondAttribute="bottom" constant="6" id="OvX-iZ-QDc"/>
+                                                <constraint firstItem="5mO-oT-6OQ" firstAttribute="leading" secondItem="xLr-0a-21l" secondAttribute="leading" id="PWl-Jd-XhF"/>
+                                                <constraint firstItem="3Oq-YQ-dol" firstAttribute="top" secondItem="dUZ-ls-jeT" secondAttribute="bottom" constant="10" id="WOT-K5-GZo"/>
+                                                <constraint firstAttribute="trailing" secondItem="dUZ-ls-jeT" secondAttribute="trailing" id="aWe-KM-9Bt"/>
+                                                <constraint firstAttribute="trailing" secondItem="5mO-oT-6OQ" secondAttribute="trailing" id="cbM-Hz-4m1"/>
+                                                <constraint firstItem="SbG-ep-niK" firstAttribute="leading" secondItem="xLr-0a-21l" secondAttribute="leading" id="p8b-Vg-Fcx"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="213" height="209"/>
+                                        <connections>
+                                            <outlet property="addressLabel" destination="5mO-oT-6OQ" id="myj-fi-XIX"/>
+                                            <outlet property="isFavoriteButton" destination="3Oq-YQ-dol" id="6We-0W-jNe"/>
+                                            <outlet property="mainImageView" destination="dUZ-ls-jeT" id="hZQ-NT-CJ9"/>
+                                            <outlet property="nameLabel" destination="SbG-ep-niK" id="P4K-nK-5y7"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FavoriteGymHeaderReusableView" id="ODD-Vk-ffb" customClass="FavoriteGymHeaderReusableView" customModule="KINCLE" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="236"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="244"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoriteGymHeader" translatesAutoresizingMaskIntoConstraints="NO" id="KVa-Xm-Jap">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="236"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="244"/>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Q5s-Ri-Vbi">
-                                            <rect key="frame" x="82.5" y="94.5" width="249" height="47"/>
+                                            <rect key="frame" x="82.5" y="98.5" width="249" height="47"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="즐겨찾는 암장을 등록하고 즐겨보세요" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSS-wp-zlB">
                                                     <rect key="frame" x="0.0" y="0.0" width="249" height="20.5"/>
@@ -108,7 +155,7 @@
                                             </subviews>
                                         </stackView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MU1-Eh-L31">
-                                            <rect key="frame" x="166" y="151.5" width="82" height="30"/>
+                                            <rect key="frame" x="166" y="155.5" width="82" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="82" id="N6U-U9-zjh"/>
                                                 <constraint firstAttribute="height" constant="30" id="vqR-f7-im7"/>
@@ -155,5 +202,6 @@
     </scenes>
     <resources>
         <image name="favoriteGymHeader" width="375" height="238"/>
+        <image name="favorite_gym_on" width="24" height="24"/>
     </resources>
 </document>
